tests/invalid/MethodRef_Invalid_1.whiley
import * from whiley.lang.*

type FileReader is {int position, [byte] data}

type Reader is {int ::(FileReader, int) read}
